<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MDect</string>
    <string name="description_en"></string>
    <string name="description_it"></string>
    <string name="image_view">Image View</string>
    <string name="detect">Detect</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">Restart</string>
    <string name="select">Load new photo</string>
    <string name="live">Open Camera</string>
    <string name="image">Upload New Image</string>

    <string name="result">Recommended Skincare Product</string>
    <string name="app_login"><font color="#FF6200EE">Cure &amp; Care</font></string>
    <string name="app_home">Welcome to <b><font color="#FF6200EE">Cure &amp; Care</font></b></string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Don\'t have an account? <b><font color="#FFFFFF">Sign Up</font></b></string>
    <string name="already_have_account">Already have an account? <b><font color="#FFFFFFFF">Login</font></b></string>

    <string name="send_email_auth">Send</string>
    <string name="forgot_description">
        Enter the email address associated with your account.
    </string>
    <string name="forgot_description2">
        We will email you the process to reset your password.
    </string>
    <string name="description">
        <font fgcolor="#D9DDDC">
            <i>Discover personalized skincare recommendations and expert product suggestions with our app. Get tailored skincare advice and professional image-based product classifications at your fingertips</i>
        </font>
    </string>
    <string name="scan_button_text">Load Image</string>
    <string name="skin_type_button_text">View Skin Type</string>
    <string name="doctor_schedule_button_text">View Doctor Schedule</string>
    <string name="FirstPageWord">A MOBILE BASED APPLICATION FOR DETECTING COUNTERFEIT FOREIGN EXCHANGE CURRENCIES THROUGH IMAGE PROCESSING</string>

    <string name="about">ABOUT</string>
    <string name="userguide">USER GUIDE</string>
    <string name="developers">DEVELOPERS</string>
    <string name="convert_currency">Convert Currency</string>
    <string name="info">INFORMATION:</string>
    <string name="frontbank_notetxt"></string>
    <string name="backbank_notetxt"></string>
    <string name="title_activity_convert">convert</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="guide_desc">➔Click the "CAPTURE" button and take a photo of the paper bill.\n➔Make sure the image is clear and suits the gridlines of the camera.
    </string>
    <string name="guide_desc1">➔Open your internet connection.\n➔Select your desired country and enter the amount.
    </string>
    <string name="guide_desc2">➔Select or import your desired image from your gallery.
    </string>
    <string name="about_us">M-Dect: A Mobile Based Application for Detecting Counterfeit Foreign Exchange (forex)
    Currencies Through Image Processing, which makes it simpler and more accessible for people
    and businesses to verify the legitimacy of their currency transactions, it has the potential to
    transform the way that foreign exchange currencies are now validated. Another feature of this
    would be the currency converter.\n\nThis application is only limited for:\n •US dollar ($)\n•South Korean won (₩)\n•New Taiwan Dollar(NT$)\n•Yen (JP¥)\n•Philippine peso (₱)\n\nOther currencies may not
    work in this application</string>

    <string name="capture">\n 1. Position the banknote within the camera frame. \n
        \n 2. Tap on the camera icon to capture a clear image of the currency. \n
        \n 3. Ensure proper lighting and alignment for accurate results. \n
        \n 4. A green checkmark indicates an authentic banknote, while a red cross signals a potential counterfeit. \n
        \n 5. Access educational resources on how to identify genuine banknotes. \n
        </string>

    <string name="dev">
Development Team for "M-Dect: A Mobile Based Application for Detecting Counterfeit Foreign Exchange (Forex) Currencies":\n
\n\n
1. Lead Developers:\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Mary Ann Moneda\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Benita Muriel F. Montano\n\n

2. UI/UX Designers:\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Mario Jr. M. Tunay\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Benita Muriel F. Montano\n\n

3. Quality Assurance Testers:\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Mario Jr. M. Tunay\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Benita Muriel F. Montano\n
         \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0 \u00A0\u00A0\u00A0Mary Ann Moneda\n\n\n

Email: mdect_developer@gmail.com\n
© 2024 MDect. All Rights Reserved.
</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string-array name="currency_options">
        <item>USD</item>
        <item>INR</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>PHP</item>
        <item>IDR</item>
        <item>JPY</item>
        <item>TWD</item>
        <item>KRW</item>
    </string-array>

    <string-array name="currency_pesos">
        <item>PHP</item>
    </string-array>

    <string-array name="currency_rupees">
        <item>IDR</item>
    </string-array>

    <string-array name="currency_dollars">
        <item>USD</item>
    </string-array>

    <string-array name="currency_yen">
        <item>JPY</item>
    </string-array>

    <string-array name="currency_won">
        <item>KRW</item>
    </string-array>


    <string name="fromHint">Enter Amount</string>
    <string name="toHint">Press Convert</string>
    <string name="convertText">Convert</string>
    <string name="toCTA">↓</string>
    <string-array name="model">
        <item>Money1</item>
        <item>Money2 </item>
        <item>Money3</item>
        <item>Money4-int8</item>
    </string-array>
</resources>