<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/select_model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cursive_font"
                android:rotation="-10"
                android:text="@string/app_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="50sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="100dp">

                <EditText
                    android:id="@+id/email_edittext"
                    style="@style/MyEditTextStyle"
                    android:autofillHints="username"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password_edittext"
                    style="@style/MyEditTextStyle"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password_hint"
                    android:autofillHints="password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/login_button_text"
                    android:background="@drawable/rounded_button_background" />

                <TextView
                    android:id="@+id/password_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="130dp">

                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>