<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/forgot_pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageView
                android:id="@+id/your_image_view_id"
                android:layout_width="407dp"
                android:layout_height="194dp"
                android:src="@drawable/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_model_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/forgot_pass_description"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="20dp"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/forgot_pass_description2"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_description2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/color_gray"
                android:gravity="center" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="50dp">

                <EditText
                    android:id="@+id/email_edittext"
                    style="@style/MyEditTextStyle"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_hint"
                    android:autofillHints="email"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/send_email_auth"
                    android:background="@drawable/rounded_button_background" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>