<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/your_image_view_id"
                android:layout_width="407dp"
                android:layout_height="194dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_model_label" />

            <TextView
                android:id="@+id/select_model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_home"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textStyle="normal"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="251dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cameraButton"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="Scan Face" />

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="@string/scan_button_text" />

                <Button
                    android:id="@+id/skin_type_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="@string/skin_type_button_text" />

                <Button
                    android:id="@+id/doctor_schedule_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_button_background"
                    android:text="@string/doctor_schedule_button_text" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>