<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".convert_real"
    android:background="@drawable/bg2">

    <LinearLayout
        android:id="@+id/activityresutltscan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sidemenubar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            android:onClick="openNavMenu"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activityresutltscan1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityresutltscan">

        <ImageView
            android:id="@+id/homebtnimg"
            android:layout_width="109dp"
            android:layout_height="40dp"
            android:src="@drawable/home1"
            android:layout_marginStart="15dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/backbtnimg"
            android:layout_width="109dp"
            android:layout_height="40dp"
            android:src="@drawable/back1"
            android:layout_marginEnd="15dp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityresutltscan1"
        app:layout_constraintVertical_bias="0.064">

        <EditText
            android:id="@+id/fromCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"

            android:ems="10"
            android:hint="@string/fromHint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityresutltscan1" />

        <Spinner
            android:id="@+id/fromDropdown"
            android:layout_width="133dp"
            android:layout_height="36dp"
            android:popupTheme="@style/SpinnerDropdown"
            android:layout_marginStart="25dp"
            android:entries="@array/currency_options"
            android:background="@color/color_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/fromCurrency"
            app:layout_constraintTop_toBottomOf="@+id/activityresutltscan1"
            app:layout_constraintVertical_bias="0.218" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.204">

        <EditText
            android:id="@+id/toCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:editable="false"
            android:ems="10"
            android:hint="@string/toHint"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/convertButton"
            tools:layout_editor_absoluteX="16dp" />


        <Spinner
            android:id="@+id/toDropdown"
            android:layout_width="133dp"
            android:layout_height="36dp"
            android:layout_marginStart="25dp"
            android:popupTheme="@style/SpinnerDropdown"
            android:entries="@array/currency_options"
            android:background="@color/color_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/toCurrency" />


    </LinearLayout>

    <ImageView
        android:id="@+id/convertButton"
        android:layout_width="209dp"
        android:layout_height="77dp"
        android:layout_marginTop="88dp"
        android:scaleType="centerCrop"
        android:src="@drawable/convert2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/toCTA"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.555" />

    <include layout="@layout/nav_drawer" />

</androidx.constraintlayout.widget.ConstraintLayout>